@@ -1,4 +1,4 @@
-@c Copyright 1991, 1992, 1993, 1994, 1995, 1997, 2001, 2003, 2004
+@c Copyright 1991, 1992, 1993, 1994, 1995, 1997, 2001, 2003, 2004, 2005
 @c Free Software Foundation, Inc.
 @c This is part of the GAS manual.
 @c For copying conditions, see the file as.texinfo.
@@ -24,39 +24,43 @@
 (formerly Hitachi) / SuperH SH family.
 
 @table @code
-@kindex -little
-@kindex -big
-@kindex -relax
-@kindex -small
-@kindex -dsp
-@kindex -renesas
+@kindex --little
+@kindex --big
+@kindex --relax
+@kindex --small
+@kindex --dsp
+@kindex --renesas
+@kindex --allow-reg-prefix
 
-@item -little
+@item --little
 Generate little endian code.
 
-@item -big
+@item --big
 Generate big endian code.
 
-@item -relax
+@item --relax
 Alter jump instructions for long displacements.
 
-@item -small
+@item --small
 Align sections to 4 byte boundaries, not 16.
 
-@item -dsp
+@item --dsp
 Enable sh-dsp insns, and disable sh3e / sh4 insns.
 
-@item -renesas
+@item --renesas
 Disable optimization with section symbol for compatibility with
 Renesas assembler.
 
-@item -isa=sh4 | sh4a
+@item --allow-reg-prefix
+Allow '$' as a register name prefix.
+
+@item --isa=sh4 | sh4a
 Specify the sh4 or sh4a instruction set.
-@item -isa=dsp
+@item --isa=dsp
 Enable sh-dsp insns, and disable sh3e / sh4 insns.
-@item -isa=fp
+@item --isa=fp
 Enable sh2e, sh3e, sh4, and sh4a insn sets.
-@item -isa=all
+@item --isa=all
 Enable sh1, sh2, sh2e, sh3, sh3e, sh4, sh4a, and sh-dsp insn sets.
 
 @end table
