@@ -1,3 +1,10 @@
+2005-10-06  Khem Raj  <kraj@mvista.com>
+            NIIBE Yutaka  <gniibe@m17n.org>
+
+	* gas/sh/basic.exp:  Run reg-prefix test.
+	* gas/sh/reg-prefix.s: New
+	* gas/sh/reg-prefix.d: New 
+
 2005-09-30  Catherine Moore  <clm@cm00re.com>
 
 	* gas/bfin: New testsuite for bfin.
